Chirper.Server/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
  name: chirperserver-deployment
  namespace: chirper-ns
  labels:
    app: chirper-silo
    env: dev
    version: v10948171431
spec:
  selector:
    matchLabels:
      app: chirper-silo
  replicas: 1
  template:
    metadata:
      labels:
        app: chirper-silo
        orleans/serviceId: chirper-service
        orleans/clusterId: chirper-cluster
        env: dev
    spec:
      imagePullSecrets: 
      - name: dockerhub-secret
      containers:
      - name: chirper
        image: tngvlad/chirperserver:10948171431
        ports:
          - containerPort: 8080
          - containerPort: 11111
          - containerPort: 30000
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
