Chirper.Server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chirper-server-service
  namespace: chirper-ns
spec:
  selector:
    app: chirper-silo
  ports:
    - port: 11111
      targetPort: 11111
      protocol: TCP
      name: silo
      nodePort: 31111  # Expose silo port
    - port: 30000
      targetPort: 30000
      protocol: TCP
      name: gateway
      nodePort: 32000  # Expose gateway port
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: dashboard
      nodePort: 31080  # Expose dashboard port
  type: NodePort
