Chirper.Server/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chirper-server-ingress
  namespace: chirper-ns  
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chirper-server-service
            port:
              number: 11111
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chirper-server-service
            port:
              number: 30000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chirper-server-service
            port:
              number: 8080
